--- a/views/layouts/navbar.ejs
+++ b/views/layouts/navbar.ejs
@@ -12,6 +12,7 @@
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/post">Sample Post</a></li>
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/contact">Contact</a></li> -->
                 <%  if(loggedIn) { %>
+                <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/posts/mypost">My Post</a></li>
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/posts/new">New post</a></li>
                 <li class="nav-item"><a class="nav-link px-lg-3 py-3 py-lg-4" href="/auth/logout">LOG OUT</a></li>           
                 <% } %> 
